devops/k8s/manifests/k07/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: k07

---
apiVersion: v1
kind: Namespace
metadata:
  name: k07-secret

---
apiVersion: v1
kind: Namespace
metadata:
  name: k07-secret01
  labels:
    name: k07-secret01
