devops/k8s/manifests/k07/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hackme-app
  namespace: k07
  labels:
    app: hackme-app
spec:
  containers:
    - name: app
      image: towit665/hackme-app:v1
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          protocol: TCP
