devops/k8s/manifests/k07/pod2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hackme-app
  namespace: k07-secret
  labels:
    app: hackme-app
spec:
  containers:
    - name: app
      image: towit665/hackme-app:v1
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hackme-app-service
  namespace: k07-secret
  labels:
    app: hackme-app
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: hackme-app
